--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  carousel_slider: ^5.0.0
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -16,7 +17,10 @@ dependencies:
   get_it: ^8.0.3
   google_fonts: ^6.2.1
   http: ^1.3.0
+  intl: ^0.19.0
   shared_preferences: ^2.5.2
+  smooth_page_indicator: ^1.2.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -25,3 +29,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/icons/
