--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   get_it: ^8.0.3
   google_fonts: ^6.2.1
   http: ^1.3.0
+  image_picker: ^1.1.2
   intl: ^0.19.0
   shared_preferences: ^2.5.2
   smooth_page_indicator: ^1.2.1
