--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,10 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.3
   flutter_localizations:
     sdk: flutter
+  flutter_native_splash: ^2.4.5
   geocoding: ^3.0.0
   geolocator: ^13.0.2
   get_it: ^8.0.3
@@ -33,3 +35,4 @@ flutter:
 
   assets:
     - assets/icons/
+    - assets/images/logos/
