--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   carousel_slider: ^5.0.0
+  firebase_core: ^3.12.1
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.14.3
@@ -18,6 +19,7 @@ dependencies:
   geolocator: ^13.0.2
   get_it: ^8.0.3
   google_fonts: ^6.2.1
+  google_sign_in: ^6.2.2
   http: ^1.3.0
   image_picker: ^1.1.2
   intl: ^0.19.0
