--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   http: ^1.3.0
   image_picker: ^1.1.2
   intl: ^0.19.0
+  mask_text_input_formatter: ^2.9.0
   shared_preferences: ^2.5.2
   smooth_page_indicator: ^1.2.1
   url_launcher: ^6.3.1
