--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  cached_network_image: ^3.4.1
   carousel_slider: ^5.0.0
   firebase_core: ^3.12.1
   flutter:
@@ -25,6 +26,7 @@ dependencies:
   intl: ^0.19.0
   mask_text_input_formatter: ^2.9.0
   shared_preferences: ^2.5.2
+  shimmer: ^3.0.0
   smooth_page_indicator: ^1.2.1
   url_launcher: ^6.3.1
 
