refactor: remove JSON content verification step and streamline play-store-config.json creation in CI/CD workflow

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -87,9 +87,6 @@ jobs:
           ${{ secrets.PLAY_STORE_CONFIG_JSON }}
           EOF
 
-      - name: Verificar conteúdo do JSON
-        run: cat play-store-config.json
-
       - name: Deploy para track Internal
         run: |
           fastlane supply \
@@ -122,7 +119,10 @@ jobs:
           path: build/app/outputs/bundle/release/
 
       - name: Configurar credenciais do Google Play
-        run: echo "${{ secrets.PLAY_STORE_CONFIG_JSON }}" > play-store-config.json
+        run: |
+          cat <<EOF > play-store-config.json
+          ${{ secrets.PLAY_STORE_CONFIG_JSON }}
+          EOF
 
       - name: Deploy para track Production
         run: |
